# ailauncher

./: CONTRIBUTING.md  Cargo.toml  README.md  telemetry-id
src/: main.rs
website/: index.html  install.sh  uninstall.sh
