[package]
name = "ailauncher"
version = "0.1.0"
edition = "2021"
description = "Interactive AI provider and model launcher for terminal workflows"
license = "AGPL-3.0-only"
repository = "https://github.com/thomasboom/AI-Select"
homepage = "https://github.com/thomasboom/AI-Select"

[[bin]]
name = "ailauncher"
path = "src/main.rs"

[dependencies]
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
anyhow = "1.0"
which = "6.0"
colored = "2.1"
rayon = "1.10"
figlet-rs = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
